.infra/manifest/itsme/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: itsme
  namespace: mrzt
spec:
  selector:
    app: itsme
  ports:
    - name: http
      port: 3000
      targetPort: http
